--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="sectionsContainer">
             <div class="section">
                 <h2>Section 1</h2>
-               <!--Add text, images, Sand links for section 1 below!-
+               <!--Add text, images, Sand links for section 1 below l!-
                 
             </div>
              <div class="section">
